--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: patentsviewdata
-Title: What the Package Does (One Line, Title Case)
+Title: Download USPTO Patent Data from PatentsView
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Paul", "Oldham", , "poldham@oneworldanalytics.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-1013-4390"))
+Description: Download Data Tables from the USPTO PatentsView Service
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
