update for figure in readme

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Authors@R:
     person("Paul", "Oldham", , "poldham@oneworldanalytics.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1013-4390"))
 Description: Download Data Tables from the USPTO PatentsView Service
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
